--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_for(@student) do |f| %>
   <label>first name:</label><br>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :first_name %><br>
 
   <label>Last name:</label><br>
-  <%= f.text_field :room_number %><br>
+  <%= f.text_field :last_name %><br>
 
   <%= f.submit %>
 <% end %>
